# osu-rework-calculator-bot

./: .env.example  .gitignore  Cargo.toml  README.md  bun.lockb  globals.d.ts  package-lock.json  package.json
performanceCalculator/: README.md  setup.ts
src/: cache.ts  command_trait.rs  handler.rs  index.ts  main.rs  options.rs
src/commands/: mod.rs  ping.rs  ping.ts
src/listeners/: interactionCreate.ts
src/message-commands/: calculate.ts
src/types/: cache.ts  commandTypes.ts  scoresTypes.ts
