[package]
name = "osu-rework-calculator-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
serenity = { version = "0.12.2", features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
